--- a/src/style/reportForm.scss
+++ b/src/style/reportForm.scss
@@ -10,3 +10,10 @@
 .oms2-item-not-exict{
     color:#f00;
 }
+
+//easytable 居中
+.v-table-rightview{
+    // left:0px;
+    // right:0px;
+    // margin:auto;
+}
