--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -16,5 +16,14 @@
 }
 
 
+//设置字体样式
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 ,p, i, button,.fa, label,select , option, input,{
+    font-size:16px !important;
+}
+select{
+    height:auto !important;
+}
+
+
 
 
