--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -17,7 +17,8 @@
 
 
 //设置字体样式
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 ,p, i, button,.fa, label,select , option, input,{
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 ,p, i, button,.fa, label,select , option, input,
+small,div{
     font-size:16px !important;
 }
 select{
