--- a/src/style/reportForm.scss
+++ b/src/style/reportForm.scss
@@ -11,3 +11,13 @@
     color:#f00;
 }
 
+//返回按钮
+.oms2-horizontal-back{
+    font-size:24px;
+    position:absolute;
+    left:10px;
+    top:10px;
+}
+
+
+
