更新README，公共方法说明

--- a/src/style/reportForm.scss
+++ b/src/style/reportForm.scss
@@ -1,3 +1,4 @@
+//报表底部显示数据来源
 .oms2-report-float-right{
     position:absolute;
     right:0px;
@@ -11,7 +12,7 @@
     color:#f00;
 }
 
-//返回按钮
+//不显示瑞信标题时返回按钮的位置
 .oms2-horizontal-back{
     font-size:24px;
     position:absolute;
