--- a/src/style/reportForm.scss
+++ b/src/style/reportForm.scss
@@ -20,5 +20,18 @@
     top:10px;
 }
 
+//各专业索引表格
+.oms2-grid-cell{
+    border:1px solid #F4F4F4;
+    img{
+      margin-top:10px;
+      width: 60%;
+    }
+    p{
+      margin-top:3px;
+      font-size:14px;
+    }
+  }
+
 
 
