--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -18,7 +18,7 @@
 
 
 //设置字体样式
-p, i, button,.fa, label,select , option,a, input,small{
+p, i, .fa, label,select , option,a, input,small{
     font-size:16px;
 }
 select{
